# POBR_PEPSI

./: CMakeLists.txt
src/: BoundingBox.cpp  BoundingBox.h  ColorReducer.cpp  ColorReducer.h  Dilater.cpp  Dilater.h  HistogramEqualizer.cpp  HistogramEqualizer.h  ObjectRecogniser.cpp  ObjectRecogniser.h  ScalingAlgorithmType.h  SegmentDescriptor.cpp  SegmentDescriptor.h  SegmentationProcessor.cpp  SegmentationProcessor.h  TraitDetector.cpp  TraitDetector.h  constants.h  enums.h  main.cpp
src/ColorModificators/: ColorReducer.cpp  ColorReducer.h  HistogramEqualizer.cpp  HistogramEqualizer.h
src/Filters/: Highpass.cpp  Highpass.h  IFilter.h  Lowpass.cpp  Lowpass.h  Median.cpp  Median.h
src/ObjectDetection/: ObjectRecogniser.cpp  ObjectRecogniser.h  TraitDetector.cpp  TraitDetector.h
src/Scalers/: Bilinear.cpp  Bilinear.h  IScaler.cpp  IScaler.h  NearestNeighbour.cpp  NearestNeighbour.h
src/Segmentators/: SegmentDescriptor.cpp  SegmentDescriptor.h  SegmentationProcessor.cpp  SegmentationProcessor.h
